src/test/ui/associated-type-bounds/bounds-on-assoc-in-trait.stderr
error[E0277]: `<<Self as Case1>::A as Iterator>::Item` doesn't implement `Debug`
  --> $DIR/bounds-on-assoc-in-trait.rs:19:28
   |
LL |     type A: Iterator<Item: Debug>;
   |                            ^^^^^ `<<Self as Case1>::A as Iterator>::Item` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
  ::: $DIR/bounds-on-assoc-in-trait.rs:552:1
   |
LL | pub trait Debug {
   | ^^^^^^^^^^^^^^^ required by this bound in `Debug`
   |
error[E0277]: the trait bound `<<Self as Foo>::Out as Baz>::Assoc: Default` is not satisfied
  --> $DIR/bounds-on-assoc-in-trait.rs:36:38
   |
LL | pub trait Foo { type Out: Baz<Assoc: Default>; }
   |                                      ^^^^^^^ the trait `Default` is not implemented for `<<Self as Foo>::Out as Baz>::Assoc`
   |
  ::: $DIR/bounds-on-assoc-in-trait.rs:85:1
   |
LL | pub trait Default: Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Default`
   |
